package com;

public class FactoryEstadoReparacion {

    public EstadoReparacion proximoEstado (EstadoReparacion estadoActual) {
        return null;
    }
}
